--- a/index.html
+++ b/index.html
@@ -85,7 +85,124 @@
       </nav>
     </header>
     <main class="md:container md:mx-auto">
-
+      <!-- carousel sec start -->
+      <section class="my-10 mx-3">
+        <div class="carousel w-full lg:h-[550px] bg-[#E76F511A]">
+          <div id="slide1" class="carousel-item relative w-full">
+            <div class="flex flex-col lg:flex-row gap items-center gap-40 lg:gap-60 py-10 lg:py-24 px-4 lg:px-40">
+              <div class="">
+                <h1 class="text-3xl lg:text-6xl font-bold">
+                  Ride-on R15 V4 <br />
+                  with Smile
+                </h1>
+                <p class="py-6 font-light">
+                  Amet minim mollit non deserunt ullamco <br />
+                  est sit aliqua dolor do amet sint. Velit officia consequat
+                  <br />
+                  duis enim velit mollit.
+                </p>
+                <button class="btn bg-primary-calor text-white font-semibold">
+                  Purchase
+                </button>
+              </div>
+              <div class="">
+                <img class="w-full" src="./slider/bike1.png" alt="" />
+              </div>
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide4" class="btn btn-circle">❮</a>
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <div id="slide2" class="carousel-item relative w-full">
+            <div class="flex flex-col lg:flex-row gap items-center gap-40 lg:gap-60 py-10 lg:py-24 px-4 lg:px-40">
+              <div class="">
+                <h1 class="text-3xl lg:text-6xl font-bold">
+                  Ride-on R15 V4 <br />
+                  with Smile
+                </h1>
+                <p class="py-6 font-light">
+                  Amet minim mollit non deserunt ullamco <br />
+                  est sit aliqua dolor do amet sint. Velit officia consequat
+                  <br />
+                  duis enim velit mollit.
+                </p>
+                <button class="btn bg-primary-calor text-white font-semibold">
+                  Purchase
+                </button>
+              </div>
+              <div class="">
+                <img class="w-full" src="./slider/bike2.png" alt="" />
+              </div>
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide1" class="btn btn-circle">❮</a>
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <div id="slide3" class="carousel-item relative w-full">
+            <div class="flex flex-col lg:flex-row gap items-center gap-40 lg:gap-60 py-10 lg:py-24 px-4 lg:px-40">
+              <div class="">
+                <h1 class="text-3xl lg:text-6xl font-bold">
+                  Ride-on R15 V4 <br />
+                  with Smile
+                </h1>
+                <p class="py-6 font-light">
+                  Amet minim mollit non deserunt ullamco <br />
+                  est sit aliqua dolor do amet sint. Velit officia consequat
+                  <br />
+                  duis enim velit mollit.
+                </p>
+                <button class="btn bg-primary-calor text-white font-semibold">
+                  Purchase
+                </button>
+              </div>
+              <div class="">
+                <img class="w-full" src="./slider/bike3.png" alt="" />
+              </div>
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide2" class="btn btn-circle">❮</a>
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+          <div id="slide4" class="carousel-item relative w-full">
+            <div class="flex flex-col lg:flex-row gap items-center gap-40 lg:gap-60 py-10 lg:py-24 px-4 lg:px-40">
+              <div class="">
+                <h1 class="text-3xl lg:text-6xl font-bold">
+                  Ride-on R15 V4 <br />
+                  with Smile
+                </h1>
+                <p class="py-6 font-light">
+                  Amet minim mollit non deserunt ullamco <br />
+                  est sit aliqua dolor do amet sint. Velit officia consequat
+                  <br />
+                  duis enim velit mollit.
+                </p>
+                <button class="btn bg-primary-calor text-white font-semibold">
+                  Purchase
+                </button>
+              </div>
+              <div class="">
+                <img class="w-full" src="./slider/bike4.png" alt="" />
+              </div>
+            </div>
+            <div
+              class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between"
+            >
+              <a href="#slide3" class="btn btn-circle">❮</a>
+              <a href="#slide1" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Future Bikes set start -->
     </main>
     <footer></footer>
   </body>
