carousel sec design & responsive complete

--- a/index.html
+++ b/index.html
@@ -203,6 +203,17 @@
         </div>
       </section>
       <!-- Future Bikes set start -->
+       <section class="my-10 mx-3">
+          <div class="text-center space-y-2">
+            <h1 class="text-5xl font-semibold">Future Bikes In This Year</h1>
+            <p class="text-sm font-semibold text-primary-calor underline">Best bike collection</p>
+          </div>
+          <div class="grid grid-cols-1 lg:grid-cols-3 py-10 lg:pl-40 space-y-8 lg:space-y-0">
+            <img src="./image/feature-bike.png" alt="">
+            <img src="./image/feature-bike.png" alt="">
+            <img src="./image/feature-bike.png" alt="">
+          </div>
+       </section>
     </main>
     <footer></footer>
   </body>
