--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
           </div>
        </section>
     </main>
-    <footer></footer>
+    <footer>
+      
+    </footer>
   </body>
 </html>
