latest News sec design & responsive complete

--- a/index.html
+++ b/index.html
@@ -214,9 +214,51 @@
             <img src="./image/feature-bike.png" alt="">
           </div>
        </section>
+       <!-- latest News sec start -->
+        <section class="my-10 mx-3">
+          <div class="text-center mb-8"><h3 class="text-6xl font-semibold">Latest News</h3></div>
+          <div class="grid g lg:grid-cols-3 gap-5">
+            <div class="card shadow-xl">
+              <figure class="p-5">
+                <img src="./image/latest1.png" alt="">
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title font-semibold">Ducati XDIAVEL S-73</h2>
+                <p class="font-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="">
+                  <button class="btn bg-primary-calor text-white">Read More</button>
+                </div>
+              </div>
+            </div>
+            <div class="card shadow-xl">
+              <figure class="p-5">
+                <img src="./image/latest2.png" alt="">
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title font-semibold">Ducati XDIAVEL S-73</h2>
+                <p class="font-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="">
+                  <button class="btn bg-primary-calor text-white">Read More</button>
+                </div>
+              </div>
+            </div>
+            <div class="card  shadow-xl">
+              <figure class="p-5">
+                <img src="./image/latest3.png" alt="">
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title font-semibold">Ducati XDIAVEL S-73</h2>
+                <p class="font-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="">
+                  <button class="btn bg-primary-calor text-white">Read More</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
     <footer>
-      
+
     </footer>
   </body>
 </html>
