--- a/index.html
+++ b/index.html
@@ -256,6 +256,122 @@
             </div>
           </div>
         </section>
+       <!-- Happy Clients sec start -->
+        <section class="my-10 mx-3">
+          <div class="text-center mb-8"><h3 class="text-6xl font-semibold">Happy <span class="text-primary-calor">Clients says</span></h3></div>
+          <div class="grid g lg:grid-cols-3 gap-5">
+            <div class="card shadow-xl">
+              <figure class="p-5">
+                <img class="w-36" src="./image/user-1.png" alt="">
+              </figure>
+              <div class="card-body text-center px-20">
+                <p class="font-normal">Slate helps you see how 
+                  many more days you need 
+                  to work to reach your financial 
+                  goal for the month and year.</p>
+                  <div class="rating justify-center">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"/>
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                  <h5>Regina Miles</h5>
+                  <p>Banker</p>
+              </div>
+            </div>
+            <div class="card shadow-xl">
+              <figure class="p-5">
+                <img class="w-36" src="./image/user-2.png" alt="">
+              </figure>
+              <div class="card-body text-center px-20">
+                <p class="font-normal">Slate helps you see how 
+                  many more days you need 
+                  to work to reach your financial 
+                  goal for the month and year.</p>
+                  <div class="rating justify-center">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"/>
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                  <h5>Regina Miles</h5>
+                  <p>Banker</p>
+              </div>
+            </div>
+            <div class="card shadow-xl">
+              <figure class="p-5">
+                <img class="w-36" src="./image/user-3.png" alt="">
+              </figure>
+              <div class="card-body text-center px-20">
+                <p class="font-normal">Slate helps you see how 
+                  many more days you need 
+                  to work to reach your financial 
+                  goal for the month and year.</p>
+                  <div class="rating justify-center">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"/>
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                  <h5>Regina Miles</h5>
+                  <p>Banker</p>
+              </div>
+            </div>
+        </section>
+        <!-- faq sec -->
+         <section class="my-10 mx-3">
+          <div class="text-center mb-8"><h3 class=" text-3xl lg:text-6xl font-semibold">Frequently Asked <span class="text-primary-calor">Questions</span></h3></div>
+          <div class="hero ">
+            <div class="hero-content flex-col gap-24 lg:flex-row">
+              <img src="./image/faq.png" alt="">
+              <div class="space-y-5">
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" checked="checked" />
+                  <div class="collapse-title text-xl font-medium">What are the most important things I should
+                    know about riding a bike?</div>
+                  <div class="collapse-content">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" />
+                  <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                    new one?</div>
+                  <div class="collapse-content">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" />
+                  <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                  <div class="collapse-content">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" />
+                  <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                    new one?</div>
+                  <div class="collapse-content">
+                    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+         </section>
     </main>
     <footer>
 
